Created layout for small screens

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Re-Reditting</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato|Oswald" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
-  <h1>Help Meeeeee</h1>
+  <div id="wholePage">
+    <div id="topHeader">
+      <img id="head-ray-pic" src="/assets/header_bg.svg" alt="Background of header">
+      <img id="main-logo" src="/assets/logo.svg" alt="Re-Reddit Logo">
+      <img id="plus-sign" src="/assets/Plus.svg" alt="Plus Sign">
+    </div><!-- /header -->
+    <div id="nav-Bar">
+      <ul id="nav-list">
+        <li class="nav-items">RANDOM</li>
+        <li class="nav-items">MY BOARDS</li>
+        <li class="nav-items">GET THE APP</li>
+      </ul>
+    </div>
+    <div id="mainBody">
+    </div>
+    <div id="theFooter">
+      <img src="assets/facebook_grey.svg" alt="Facebook Logo">
+      <img src="assets/instagram_grey.svg" alt="Instagram Logo">
+    </div>
+  </div>
   <script src="/js/app.js"></script>
 </body>
 </html>
