More styling thorugh sass

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div id="nav-Bar">
       <ul id="nav-list">
         <li class="nav-items">RANDOM</li>
-        <li class="nav-items">MY BOARDS</li>
+        <li id="middle-nav" class="nav-items">MY BOARDS</li>
         <li class="nav-items">GET THE APP</li>
       </ul>
     </div>
